# chatbot-mcp

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
app/: __init__.py  agent.py  config.py  db.py  main.py  models.py  tools.py
sql/: schema.sql  seed.sql
src/: app.ts  index.ts
src/config/: index.ts
src/controllers/: chatController.ts  healthController.ts
src/db/: index.ts  pool.ts  queries.ts
src/middleware/: errorHandler.ts  rateLimiter.ts  requestLogger.ts  validateRequest.ts
src/routes/: chatRoutes.ts  healthRoutes.ts  index.ts
src/services/: agentService.ts  chatService.ts  conversationService.ts
src/tools/: declarations.ts  dispatch.ts  index.ts
src/types/: api.ts  conversation.ts  index.ts  scope.ts
src/utils/: errors.ts  geminiRetry.ts  jsonable.ts  logger.ts
