[project]
name = "chatbot-pawan"
version = "0.1.0"
description = "Guardrailed therapy-app assistant (MVP) powered by the Gemini API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
chatbot-pawan = "main:main"
